--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,5 +1,5 @@
 #Extent Report
-extent.reporter.spark.start=true
+extent.reporter.spark.start=false
 extent.reporter.spark.out=Reports/Spark.html
   
 #PDF Report
